# seqbank

./: .coveragerc  .gitignore  README.rst  pyproject.toml
.github/workflows/: docs.yml  testing.yml
docs/: api.rst  cli.rst  conf.py  index.rst
seqbank/: __init__.py  dfam.py  exceptions.py  io.py  main.py  refseq.py  seqbank.py  transform.py  utils.py
tests/: test_dfam.py  test_io.py  test_main.py  test_refseq.py  test_seqbank.py  test_transform.py  test_utils.py
tests/testdata/: 5seq.fa  NC_010663.1.gb  NC_010663.1.gb.bz2  NC_024664.1.trunc.fasta  NC_036112.1.fasta  NC_036113.1.fasta  NC_044840.1.fasta  NZ_JAJNFP010000161.1.fasta  accessions.txt  seqbank.h5
tests/testdata/seqbank.sb/: 000009.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
