[tool.poetry]
name = "seqbank"
version = "0.1.2"
description = "A database to quickly read and write DNA sequence data in numerical form."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = ">=0.4.0"
numpy = ">=1.22.0"
pyfastx = ">=1.1.0"
h5py = ">=3.9.0"
biopython = ">=1.81"
attrs = ">=23.1.0"
rich = ">=10.16.1"
requests = ">=2.31.0"
joblib = ">=1.3.2"
speedict = ">=0.3.11"
plotly = "^5.24.0"
pandas = "^2.2.2"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.1"
ipykernel = ">=6.6.1"
coverage = ">=5.5"
autopep8 = ">=1.5.7"
Sphinx = ">=5.0.0"
nbsphinx = ">=0.8.7"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.15.0"
sphinx-copybutton = ">=0.4.0"
black = ">=21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seqbank = "seqbank.main:app"
